# Fix_agent

./: .gitignore  API_CONFIG_GUIDE.md  DEEPAGENTS_TOOLS_VALIDATION_REPORT.md  DESIGN_AI_Defect_Detection_System.md  ENHANCED_WORKFLOW_ARCHITECTURE.md  FILE_ORGANIZATION.md  INSTALL.md  ITERATION_REPORT.md  QUICKSTART.md  QUICK_START.md  README.md  TASK_AI_Defect_Detection_System.md  TASK_ATOMIZED_项目分析功能.md  TASK_项目分析功能.md  WINDOWS_INSTALL.md  aidefect_cli.py  build.py  build_windows.py  create_windows_package.py  demo_t021_orchestrator.py  demo_t022_mode_routing.py  demo_t023_user_interaction.py  demo_t024_cli_interface.py  demo_t025_static_analysis_command.py  demo_t027_fix_analysis_interaction.py  fix_conditional_renderer.py  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_cache_simple.py  test_cache_system.py  test_concurrent_simple.py  test_configuration_system.py  test_conversation_context.py  test_deep_cli.py  test_error_handling.py  test_file_analysis_simple.py  (+5 more)
.fix_backups/: main_20251018_013529.py  settings_20251018_013529.py
.github/workflows/: build.yml  ci.yml  release.yml
Dataset/: .gitignore  README.md  SSH_Git_Setup.md  __init__.py  data_types.py  final_check.py  import_helper.py  main.py  quick_start.py  requirements.txt  run_evaluation.py  simple_test.py  test_complete_workflow.py  test_imports.py
Dataset/core/: __init__.py  agent.py  agent_config.py  evaluation.py
Dataset/loaders/: __init__.py  base.py  bugs_in_py.py  swe_bench.py
Dataset/utils/: __init__.py  config.py  file_utils.py  metrics.py  metrics_simple.py  validation.py  visualization.py  visualization_simple.py
aidefect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
archive/TASK/: TASK_AI_Agent_Dev_System.md  TASK_PHASE_01_INFRASTRUCTURE.md  TASK_PHASE_02_COMMUNICATION.md  TASK_PHASE_03_AGENT_FRAMEWORK.md  TASK_PHASE_04_LLM_INTEGRATION.md  TASK_PHASE_05_TOOLS_SYSTEM.md  TASK_PHASE_06_AGENTS_IMPLEMENTATION.md  TASK_PHASE_07_WORKFLOW_ENGINE.md  TASK_PHASE_08_CONTEXT_MANAGEMENT.md  TASK_PHASE_09_CLI_INTERFACE.md
archive/standard/: AGENT_INTERFACE_SPECIFICATIONS.md  DESIGN_AI_Agent_Dev_System.md  DEVELOPMENT_GUIDELINES.md  zhipu_langchain.md  zhipu_python_sdk.md
config/: default.yaml  llm_config.yaml  mock_llm_config.yaml  project_analysis_config.yaml  user_config.example.yaml  user_config.yaml
config/examples/: README.md  development.yaml  minimal.yaml  production.yaml  testing.yaml
demos/: demo_cli.py  demo_t018_static_analysis.py  demo_t019_deep_analysis.py  demo_t026_deep_analysis_interaction.py  simple_demo.py
docs/: ALIGN_AI_Defect_Detection_System.md  CONFIG_IMPROVEMENTS.md  DEMO_GUIDE.md  FINAL_AI_Defect_Detection_System.md  Fix_Agent_二次开发详细设计报告.md  Fix_Agent_关键算法设计报告.md  Fix_Agent_分析报告.md  Fix_Agent_用户指南.md  LICENSE  OVERVIEW.md  QUICKSTART.md  QUICK_START.md  README.md  Zhipu_Python_SDK.txt
docs/Guide/: API_CONFIG_GUIDE.md  INSTALL_GUIDE.md
history/: USAGE_GUIDE.md  cliOfDeepagents.txt  contextOfDeepagents.txt  conveyContextOfDeepagents.txt  coordinateDeepagents.txt  humanInLoopOfDeepagents.md  memoryOfDeepagents.txt  midwareOfDeepagents.txt  three_agent_workflow_design.md  toolsOfDeepAgents.txt  workflowOfDeepAgents.txt
scripts/: README.md  aidefect  configure_llm.py  diagnose_config.py  install.bat  install.sh  install_unix.sh  install_windows.bat  manage_config.py  quick_setup.py  set_zhipu_key.sh  setup.py  setup_api.sh
scripts/aidefect.egg-info/: PKG-INFO  entry_points.txt  requires.txt
src/: __init__.py  __main__.py  main.py  run.py  web_app_main.py  web_app_stop.py
src/agent/: __init__.py  execution_engine.py  file_selector.py  mode_router.py  orchestrator.py  planner.py  user_interaction.py
src/agents/: agent.py
src/aidefect/: __init__.py
src/config/: config.py  subagent.py
src/defectDetective/: agent.py  agent_memory.py  execution.py  file_ops.py  input.py  main.py  run.py  token_utils.py  ui.py
src/interface/: commands.py
src/interfaces/: __init__.py  cli.py  deep_commands.py  file_manager.py  fix_commands.py  main.py  static_commands.py  web.py  workflow_commands.py
src/llm/: __init__.py  anthropic_provider.py  base.py  client.py  concurrency_manager.py  config.py  exceptions.py  http_client.py  mock_provider.py  openai_provider.py  response_parser.py  zhipu_provider.py
src/midware/: __init__.py  agent_memory.py  context_enhancement.py  layered_memory.py  logging.py  security.py
src/prompt/: default_agent_prompt.md
src/prompts/: __init__.py  ai_file_selection_prompt_builder.py  base.py  manager.py  renderer.py  renderer.py.backup  templates.py
src/tools/: __init__.py  ai_dynamic_analysis_caller.py  ai_file_selector.py  ai_fix_suggestion_generator.py  ai_problem_detector.py  ai_recommendation_displayer.py  ast_analyzer.py  backup_manager.py  bandit_analyzer.py  cli_coordinator.py  code_analyzer.py  code_auto_modifier_executor.py  code_fix_execution_base.py  deep_analyzer.py  deep_report_generator.py  diff_viewer.py  error_detector.py  file_importance_analyzer.py  (+42 more)
tests/: README.md  __init__.py  conftest.py  test_agents.py  test_bandit_analyzer.py  test_bandit_integration.py  test_cache.py  test_code_analyzer.py  test_config.py  test_flake8_analyzer.py  test_flake8_integration.py  test_interface.py  test_logger.py  test_middleware.py  test_phase5_workflow_integration.py  test_t016_demo.py  test_t029_web_interface.py  test_t030_web_results.py  test_t031_fix_interface.py  test_tools.py  test_web_app.py
tests-temp/: test_cache_adapted.py  test_cli.py  test_concurrent_analysis.py  test_conversation_export.py  test_deep_analysis_simple.py  test_deep_analyzer.py  test_deep_analyzer_mock.py  test_end_to_end_deep_analysis.py  test_file_analysis.py  test_file_analysis_formatting.py  test_fix_flow.py  test_llm_client.py  test_llm_config.py  test_performance_adapted.py  test_static_analysis_integration.py
tools/: __init__.py  aidefect_cli.py  aidefect_web.py  setup.py
web_app/: README.md  docker-compose.yml  index.html  run.sh  start.sh  start_server.sh  stop.sh  stop_server.sh
(+124 files in other folders)
