[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidefect"
version = "1.0.0"
authors = [
    {name = "AIDefectDetector Team", email = "contact@aidefect.com"}
]
description = "AI驱动的智能代码缺陷检测与修复系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "ai",
    "code analysis",
    "defect detection",
    "repair",
    "static analysis",
    "deep analysis",
    "automated fixing",
    "llm",
    "artificial intelligence",
    "code quality",
    "security scanning",
    "pytest",
    "pylint",
    "flake8",
    "bandit",
    "agent architecture",
    "workflow automation"
]

dependencies = [
    "zai-sdk>=0.0.3.3",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.8.0",
    "pylint>=3.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "mccabe>=0.7.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "chardet>=5.0.0",
    "aiofiles>=23.0.0",
    "asyncio-compat>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
web = [
    "jinja2>=3.0.0",
    "bootstrap-flask>=2.0.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.8.0",
]
reporting = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "jupyter>=1.0.0",
]
monitoring = [
    "psutil>=5.8.0",
    "memory-profiler>=0.60.0",
]
all = [
    "aidefect[dev,web,database,reporting,monitoring]",
]

[project.urls]
Homepage = "https://github.com/3uyuan1ee/Fix_agent"
Documentation = "https://github.com/3uyuan1ee/Fix_agent#readme"
Repository = "https://github.com/3uyuan1ee/Fix_agent.git"
"Bug Tracker" = "https://github.com/3uyuan1ee/Fix_agent/issues"

[project.scripts]
aidefect = "interfaces.cli:main"
aidefect-web = "interfaces.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]
"config" = ["*.yaml", "*.yml"]
"prompts" = ["*.yaml", "*.yml", "*.txt"]
"docs" = ["*.md"]
"scripts" = ["*.sh", "*.bat", "*.py"]

# Black 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | _build
)/
'''

# isort 导入排序配置
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["flask", "pylint", "flake8", "bandit", "zai", "loguru", "click", "rich", "tqdm", "requests", "yaml", "dotenv"]

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pylint.*",
    "flake8.*",
    "bandit.*",
    "zai.*",
    "loguru.*",
    "rich.*",
    "tqdm.*"
]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage 配置
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit 安全检查配置
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

# Pylint 配置
[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Black 兼容性
    "R0903",  # 太少公共方法
    "W0611",  # 未使用导入
]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.design]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 7
min-public-methods = 2
max-public-methods = 20