[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Fix_agent"
version = "0.1.0"
description = "AI Coding Assistant - 代码缺陷修复和分析工具"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "3uyuan1ee", email = "1481059602@qq.com"}
]
keywords = ["ai", "coding", "assistant", "cli", "code-analysis", "bug-detection","deepagents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "rich>=13.0.0",
    "requests",
    "prompt-toolkit>=3.0.52",
    "langchain-openai>=0.1.0",
    "tavily-python",
    "python-dotenv",
    "deepagents==0.2.4",
    # 核心Python代码分析工具 - 确保开箱即用
    "pylint>=2.17.0",         # 全面的Python代码分析
    "flake8>=6.0.0",           # Python代码风格和基础检查
    "mypy>=1.0.0",             # Python静态类型检查
    "bandit>=1.7.0",           # Python安全漏洞检查
    "black>=23.0.0",           # Python代码格式化
    "astroid>=2.15.0",         # pylint依赖
    "isort>=5.12.0",           # 导入排序工具
    "pydocstyle>=6.0.0",      # 文档字符串风格检查
    # 基础解析和配置支持
    "lxml>=4.9.0",             # XML解析（用于工具输出解析）
    "pyyaml>=6.0.0",           # YAML配置文件解析
    "toml>=0.10.0",            # TOML配置文件解析
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/3uyuan1ee/Fix_agent"
Repository = "https://github.com/3uyuan1ee/Fix_agent"
Documentation = "https://github.com/3uyuan1ee/Fix_agent#readme"
"Bug Tracker" = "https://github.com/3uyuan1ee/Fix_agent/issues"

[project.scripts]
fix-agent = "src.main:cli_main"
fixagent = "src.main:cli_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]